align and fix redirect

--- a/src/components/search/options/Options.module.scss
+++ b/src/components/search/options/Options.module.scss
@@ -50,3 +50,7 @@
     background-color: $primary-green !important;
     opacity: 1;
 }
+
+.options {
+    display: flex;
+}
